# modern-cmake

./: .gitignore  README.md
install/lib/: fruit.lib  veg.lib
install/lib/cmake/noms/: noms-config.cmake  noms-fruit-config.cmake  noms-fruit-targets-debug.cmake  noms-fruit-targets.cmake  noms-veg-config.cmake  noms-veg-targets-debug.cmake  noms-veg-targets.cmake
install1/include/noms/fruit/: apple.h
install1/include/noms/veg/: asparugus.h
install1/lib/: fruit.lib
install1/lib/cmake/noms/: noms-fruit-targets-release.cmake  noms-fruit-targets.cmake  noms-veg-targets-release.cmake
munch/: CMakeLists.txt
noms/: CMakeLists.txt
noms/fruit/: CMakeLists.txt  fruit-config.cmake.in
noms/fruit/src/: apple.cpp
noms/veg/: CMakeLists.txt  veg-config.cmake.in
noms/veg/src/: asparagus.cpp
test/: CMakeLists.txt
